; ModuleID = '/home/carl/AnghaBench/postgres/contrib/ltree/extr_crc32.c_ltree_crc32_sz.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/ltree/extr_crc32.c_ltree_crc32_sz.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ltree_crc32_sz(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8, align 1
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i8*, i8** %3, align 8
  store i8* %8, i8** %6, align 8
  %9 = load i64, i64* %5, align 8
  %10 = call i32 @INIT_TRADITIONAL_CRC32(i64 %9)
  br label %11

11:                                               ; preds = %14, %2
  %12 = load i32, i32* %4, align 4
  %13 = icmp sgt i32 %12, 0
  br i1 %13, label %14, label %25

14:                                               ; preds = %11
  %15 = load i8*, i8** %6, align 8
  %16 = load i8, i8* %15, align 1
  %17 = call i64 @TOLOWER(i8 signext %16)
  %18 = trunc i64 %17 to i8
  store i8 %18, i8* %7, align 1
  %19 = load i64, i64* %5, align 8
  %20 = call i32 @COMP_TRADITIONAL_CRC32(i64 %19, i8* %7, i32 1)
  %21 = load i32, i32* %4, align 4
  %22 = add nsw i32 %21, -1
  store i32 %22, i32* %4, align 4
  %23 = load i8*, i8** %6, align 8
  %24 = getelementptr inbounds i8, i8* %23, i32 1
  store i8* %24, i8** %6, align 8
  br label %11

25:                                               ; preds = %11
  %26 = load i64, i64* %5, align 8
  %27 = call i32 @FIN_TRADITIONAL_CRC32(i64 %26)
  %28 = load i64, i64* %5, align 8
  %29 = trunc i64 %28 to i32
  ret i32 %29
}

declare dso_local i32 @INIT_TRADITIONAL_CRC32(i64) #1

declare dso_local i64 @TOLOWER(i8 signext) #1

declare dso_local i32 @COMP_TRADITIONAL_CRC32(i64, i8*, i32) #1

declare dso_local i32 @FIN_TRADITIONAL_CRC32(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
